--- a/DB_maker.ipynb
+++ b/DB_maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,41 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2164/3149181054.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# done\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Set the directory path\n",
-    "dir_path = 'Data/street'\n",
-    "\n",
-    "def read_files(path):\n",
-    "    \"\"\"Read in all CSV files in a directory and concatenate them into a single dataframe\"\"\"\n",
-    "    # List all CSV files in the directory\n",
-    "    file_names = [f for f in os.listdir(path) if f.endswith('.csv')]\n",
-    "    \n",
-    "    # Read each CSV file into a separate dataframe\n",
-    "    dfs = []\n",
-    "    for file_name in file_names:\n",
-    "        print(f'Reading file: {file_name}')\n",
-    "        file_path = os.path.join(path, file_name)\n",
-    "        df1 = pd.read_csv(file_path)\n",
-    "        dfs.append(df1)\n",
-    "    \n",
-    "    # Concatenate all dataframes into a single dataframe\n",
-    "    df_combined = pd.concat(dfs, ignore_index=True)\n",
-    "    \n",
-    "    return df_combined\n",
-    "\n",
-    "# Call the read_files function to read in all CSV files in the specified directory\n",
-    "df = read_files(dir_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# done\n",
     "df.head(10)"
    ]
   },
@@ -61,6 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# done\n",
     "len(df)"
    ]
   },
@@ -70,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# done\n",
     "df.info()"
    ]
   },
@@ -79,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# done\n",
     "df[df['Crime ID'].isnull()]"
    ]
   },
@@ -88,6 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# done\n",
     "sum(df['Crime ID'].isnull())"
    ]
   },
@@ -97,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# done\n",
     "df[df['Longitude'].isnull()]"
    ]
   },
@@ -106,6 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# done\n",
     "sum(df['Longitude'].isnull()), sum(df['Latitude'].isnull())"
    ]
   },
@@ -379,11 +367,18 @@
    "source": [
     "map_new"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -398,8 +393,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
